Add ability to delete Pokemon subscriptions

--- a/src/views/pokemon-delete.mustache
+++ b/src/views/pokemon-delete.mustache
@@ -6,9 +6,9 @@
         <h1 align="center" id="header">{{Delete Pokemon Subscription}} {{id}} </h1>
         <br>
         <div class="w-75" style="float: none; margin: 0 auto;">
-            <form action="/api/pokemon/delete/{{id}}" method="post">
+            <form action="/api/pokemon/delete/{{pokemon_id}}" method="post">
                 <div align="center">
-                    <h3 id="message">{{Are you sure that you want to delete pokemon subscription}} {{id}}?</h3>
+                    <h3 id="message">{{Are you sure that you want to delete pokemon subscription}} {{pokemon_id}}?</h3>
                     <a href="/pokemon" id="cancel" name="cancel" class="btn btn-secondary">{{Cancel}}</a>
                     <input type="hidden" id="guild_id" name="guild_id" required>
                     <button type="submit" class="btn btn-danger">{{Delete}}</button>
@@ -23,5 +23,10 @@
     if ("{{style}}" === 'dark') {
         $('body').css('background-color', 'rgb(33, 37, 41)');
         $('body').css('color', 'rgb(255, 255, 255)');
+    }
+     $('#guild_id').val(guildId);
+    const guilds = document.querySelectorAll('*[id^="g_' + guildId + '"]');
+    if (guilds) {
+        guilds.forEach(guild => guild.hidden = false);
     }
 </script>
